Update PluginLoader.java